[add] - add database

--- a/README.ME
+++ b/README.ME
@@ -7,3 +7,23 @@ Adicionar o typescript ao node
 
 Adicionar express
     yarn add @types/express -D
+
+Adicionar banco de dados Sqlite 
+    yarn add typeorm reflect-metadata sqlite3
+
+
+ ========== outras informações usadas nesse projeto ============
+
+ ====== Verbos http =====
+get    -> buscar dado
+post   -> inserir/criar dado
+put    -> alterar dado
+delete -> deletar dado
+patch  -> alterar um dado específico
+
+===== Tipos de parâmetros =======
+Routes Params -> http://xxx1411441342134
+Query Params  -> http://xxx?name=teclado
+Body Params   -> {
+                    "name":"teclado"
+                 } 
