[add] - add MVC for project

--- a/README.ME
+++ b/README.ME
@@ -11,6 +11,9 @@ Adicionar express
 Adicionar banco de dados Sqlite 
     yarn add typeorm reflect-metadata sqlite3
 
+Adicionar bibliotecas de tipagem uuid
+    yarn add @types/uuid -D
+
 
  ========== outras informações usadas nesse projeto ============
 
@@ -27,3 +30,7 @@ Query Params  -> http://xxx?name=teclado
 Body Params   -> {
                     "name":"teclado"
                  } 
+
+===== funcionamento das três camadas =======
+
+-> server -> controller -> service -> ....
